# context-hijack

./: .gitignore  LICENSE  README.md  pyproject.toml
context_hijack/: __init__.py  cli.py  shell.py
context_hijack/core/: assembler.py  codebase.py  decomposer.py  engine.py  models.py  scoring.py  templates.py
context_hijack/mcp/: server.py
context_hijack/targets/: anthropic_target.py  base.py  openai_target.py
mnemo/: __init__.py  cli.py
mnemo/core/: codebase.py  engine.py  models.py  scoring.py
mnemo/mcp/: server.py
mnemo/targets/: anthropic_target.py  base.py  openai_target.py
