[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "context-hijack"
version = "0.4.0"
description = "AI Guardrail Bypass Research Framework — Conversation History Injection & MCP Server"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "context-hijack contributors" }]
keywords = ["ai", "security", "red-team", "llm", "mcp", "jailbreak", "guardrail"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Security",
]
dependencies = [
    "typer>=0.9.0",
    "rich>=13.0.0",
    "pydantic>=2.0.0",
    "openai>=1.0.0",
    "anthropic>=0.20.0",
    "mcp>=1.0.0",
    "prompt_toolkit>=3.0.0",
]

[project.scripts]
context-hijack = "context_hijack.cli:app"
context-hijack-mcp = "context_hijack.mcp.server:main"
hijack = "context_hijack.shell:main"

[project.urls]
Repository = "https://github.com/everyoneexe/context-hijack"

[tool.hatch.build.targets.wheel]
packages = ["context_hijack"]
